# pablowsky_description

./: CMakeLists.txt  package.xml
config/: urdf_visualisation.rviz
launch/: test_robot_urdf.launch
urdf/: pablowsky.urdf.xacro  pablowsky_joint_ctrl.urdf.xacro  pablowsky_simplified.urdf.xacro
urdf/includes/: differential_drive_plugin.gazebo.xacro  pablowsky_joint_ctrl.gazebo.xacro  pablowsky_model.xacro  pablowsky_simplified_model.xacro
